# lakshya_resume_parsers

./: .gitattributes  .gitignore  1.txt  ACCURACY_IMPROVEMENT_ROADMAP.md  BACKEND_PARSED_JSON_ANALYSIS.md  CERTIFICATION_FIX_APPLIED.md  CERTIFICATION_PARSER_FIXED.md  CERTIFICATION_WORK_FILES_LIST.md  COLAB_CELL_1.py  COLAB_CELL_2.py  COLAB_CELL_2_TRAIN_FIXED.py  COLAB_MANUAL_TEST.py  COLAB_TEST_FIXED.py  COLAB_TEST_MODEL_FIXED.py  COLAB_TEST_WORKING.py  COLAB_TRAINING_SCRIPT.py  COLAB_TRAINING_WORKFLOW.md  COMPANY_FIRST_FORMAT_FIX.md  COMPLETE_PARSING_RESULTS.md  COMPLETE_TECHNICAL_DOCUMENTATION.md  CRITICAL_CERTIFICATION_ERROR.md  DATABASE_JSON_GUIDE.md  DATA_QUALITY_REPORT.md  DATA_VALIDATION_REPORT.md  DEBERTA_GARBAGE_FIX.md  DEBERTA_MODEL_ANALYSIS_REPORT.md  DEEP_TECHNICAL_AUDIT.md  DEPLOYMENT_GUIDE.md  DIAGNOSTIC_REPORT.md  DOWNLOAD_CORRECT_MODEL.md  EVALUATION_FRAMEWORK.md  EVALUATION_IMPLEMENTATION_GUIDE.md  EXACT_BACKEND_CHANGES.md  EXACT_REPLACEMENT_LOCATIONS.md  EXPECTED_UPLOAD_OUTPUT.md  EXPERIENCE_EXTRACTION_STATUS.md  EXPERIENCE_PARSING_ANALYSIS.md  EXTRACTION_QUALITY_FEATURE.md  FEATURE_ANALYSIS_REPORT.md  FINAL_FIX_COMPLETE.md  (+250 more)
backend/: .env.example  .gitignore  DATASET_CREATION_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.render  README.md  RENDER_DEPLOYMENT_GUIDE.md  ReactBasics.js  ReactSkills.js  ReactWork.js  SETUP_GLOBAL.md  add_missing_aliases.py  add_model_results_column.sql  add_pavan_to_datasets.py  audit_existing_code.py  batch_test_results.txt  batch_test_results_v2.txt  certification_integration_enhanced.py  check_actual_json_structure.py  check_data.py  check_data_simple.py  check_fixed_json.py  check_job.py  check_job_titles.py  check_json_difference.py  check_json_simple.py  check_json_storage.py  check_julian_results.py  check_sklearn_models.py  check_work_mapping.py  client_based_integration.py  client_based_patterns.json  client_parser_fix.py  compare_json_outputs.py  complete_audit.py  complete_audit_part2.py  complete_data_flow_analysis.py  complete_dataset_builder.py  complete_resume_test_output.json  (+166 more)
backend/alembic/: env.py  env_new.py
backend/app/: main.py
backend/certifications_ner_model/: meta.json
backend/data/: companies.csv  enhanced_job_titles.csv  enhanced_job_titles_expanded.csv  experience_keywords.csv  global_companies.csv  global_job_titles.csv  global_locations.csv  ground_truth_test.json  it_job_roles.csv  job_titles.csv  locations.csv  ner_training_data.jsonl  work_history_train.jsonl
backend/docs/: DATA_LOSS_VERIFICATION_LOGGING.md  PYTHON_PIP_TROUBLESHOOTING.md  SKILL_EXTRACTION_APPROACH.md
backend/education_ner_model/: meta.json
backend/migrations/: 003_add_labeling_table.sql
backend/models/: job_category_model.pkl  job_category_model_expanded.pkl  job_title_vectorizer.pkl  job_title_vectorizer_expanded.pkl  normalization_map.pkl  normalization_map_expanded.pkl
backend/observability/: alerts.yml
backend/parsers/: entity_relationship_mapper.py
backend/projects_ner_model/: meta.json
backend/reports/: batch_test_20260225_152816.csv  batch_test_20260225_164328.csv  batch_test_20260225_173219.csv
backend/scratch/: fix_db.js
backend/scripts/: analyze_work_history.py  (+19 more)
(+1445 files in other folders)
