[project]
name = "lakshya-llm-resume-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "gopitelukutla62",email = "gopitelukutla62@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
