[tool.poetry]
name = "resume-parser-backend"
version = "0.1.0"
description = "Production-ready FastAPI backend for resume parsing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11,<3.15"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"
gunicorn = "^22.0.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
boto3 = "^1.34.0"
dateparser = "^1.2.0"
httpx = "^0.27.0"
phonenumbers = "^8.13.43"
pdf2image = "^1.17.0"
prometheus-client = "^0.24.1"
sentry-sdk = "^2.52.0"
structlog = "^25.5.0"
redis = "^7.1.0"
celery = "^5.6.2"
pdfplumber = "^0.11.9"
pypdf = "^6.6.2"
pytesseract = "^0.3.13"
langdetect = "^1.0.9"
pillow = "^12.1.0"
python-docx = "^1.2.0"
pymupdf = "^1.24.0"
bcrypt = "<5"
transformers = "^5.3.0"
torch = "^2.10.0"
spacy = "^3.8.11"
pandas = "^3.0.1"
scikit-learn = "^1.8.0"
rapidfuzz = "^3.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
